# jage

./: .clang-format  .clang-tidy  .clangd  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  CONTRIBUTING.md  README.md  bootstrap.sh  conanfile.py  requirements.txt
.devcontainer/: devcontainer.json  docker-entrypoint.sh  seccomp-personality.json
.githooks/: pre-commit
.github/workflows/: ci-image.yml  cmake-multi-platform.yml
app/: CMakeLists.txt  demo.cpp  main.cpp
apps/: CMakeLists.txt
apps/demo/: CMakeLists.txt  demo.cpp
apps/editor/: CMakeLists.txt  main.cpp
cmake/: compiler_options.cmake  coverage.cmake  dependencies.cmake
docker/: Dockerfile
docs/adr/: 0001-snapshot-cache-design.md  0002-snapshot-cache-implementation-refinements.md  0003-input-adapter-design.md  0004-ring-buffer.md  (+2 more)
editor/: CMakeLists.txt
editor/app/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
libs/engine/: CMakeLists.txt
libs/engine/include/jage/engine/: no_op.hpp  scheduled_action.hpp  scheduled_action_status.hpp
libs/engine/include/jage/engine/concurrency/internal/concepts/: buffer.hpp
libs/engine/include/jage/engine/containers/spmc/: ring_buffer.hpp
libs/engine/include/jage/engine/ecs/: archetype_signature.hpp  entity.hpp
libs/engine/include/jage/engine/ecs/internal/: archetype_signature.hpp  component_id.hpp  component_id_registry.hpp
libs/engine/include/jage/engine/ext/internal/: hardware_interference_size.hpp  overloaded.hpp
libs/engine/include/jage/engine/input/: event_formatters.hpp
libs/engine/include/jage/engine/input/adapters/: glfw.hpp
libs/engine/include/jage/engine/input/internal/: event.hpp
libs/engine/include/jage/engine/input/keyboard/: action.hpp  key.hpp  scancode.hpp
libs/engine/include/jage/engine/input/keyboard/events/: key_press.hpp
libs/engine/include/jage/engine/input/mouse/events/: click.hpp  horizontal_scroll.hpp  vertical_scroll.hpp
libs/engine/include/jage/engine/input/mouse/events/cursor/: motion.hpp
libs/engine/include/jage/engine/memory/: cacheline_size.hpp
libs/engine/include/jage/engine/time/: cache_match_status.hpp  clock.hpp  durations.hpp  hertz.hpp  snapshot_cache.hpp
libs/engine/include/jage/engine/time/events/: snapshot.hpp
libs/engine/include/jage/engine/time/internal/: clock.hpp  snapshot_cache.hpp  steady_clock.hpp
libs/engine/include/jage/engine/time/internal/concepts/: cache_snapshot.hpp  real_number_duration.hpp  real_number_time_source.hpp
libs/engine/test/: CMakeLists.txt
libs/engine/test/lib/: CMakeLists.txt
libs/engine/test/lib/include/jage/engine/test/fakes/concurrency/: atomic.hpp  double_buffer.hpp
libs/engine/test/lib/include/jage/engine/test/fakes/time/: source.hpp
libs/engine/test/unit/: CMakeLists.txt
libs/engine/test/unit/engine/: CMakeLists.txt
libs/engine/test/unit/engine/jage/: CMakeLists.txt
libs/engine/test/unit/engine/jage/concurrency/: CMakeLists.txt  double_buffer_test.cpp
libs/engine/test/unit/engine/jage/containers/spmc/internal/: CMakeLists.txt  ring_buffer_test.cpp
libs/engine/test/unit/engine/jage/containers/spsc/: queue_test.cpp
libs/engine/test/unit/engine/jage/ecs/: CMakeLists.txt  archetype_signature_test.cpp
libs/engine/test/unit/engine/jage/ecs/internal/: CMakeLists.txt  archetype_signature_test.cpp  component_id_registry_test.cpp
libs/engine/test/unit/engine/jage/input/: CMakeLists.txt  event_formatters_test.cpp
libs/engine/test/unit/engine/jage/input/adapters/glfw/: key_press_test.cpp  mouse_button_click_test.cpp  scroll_test.cpp
libs/engine/test/unit/engine/jage/input/contexts/: glfw_test.cpp
libs/engine/test/unit/engine/jage/input/internal/concepts/: event_sink_test.cpp
libs/engine/test/unit/engine/jage/input/keyboard/: action_serialize_test.cpp  scancode_serialize_test.cpp
libs/engine/test/unit/engine/jage/memory/: cacheline_slot_test.cpp
libs/engine/test/unit/engine/jage/time/: durations_test.cpp  hertz_test.cpp
libs/engine/test/unit/engine/jage/time/internal/concepts/: CMakeLists.txt  cache_snapshot_test.cpp  real_number_duration_test.cpp  real_number_time_source_test.cpp
profiles/: asan  asan-msvc  clang  clang-debug  coverage  gcc  gcc-debug  gcc-release  linux  lsan  msvc  sanity-checks  tsan  ubsan  windows
scripts/: CMakeLists.txt  bootstrap.sh  check_includes.py  prune_gone_branches.py
test/unit/: CMakeLists.txt
test/unit/jage/: CMakeLists.txt  game_test.cpp  scheduled_action.cpp  scheduled_action_test.cpp  window_test.cpp
test/unit/jage/concurrency/: CMakeLists.txt  double_buffer_test.cpp
test/unit/jage/concurrency/internal/concepts/: CMakeLists.txt  buffer_test.cpp
test/unit/jage/containers/: CMakeLists.txt
test/unit/jage/containers/spmc/internal/: ring_buffer_test.cpp
test/unit/jage/containers/spsc/: queue_test.cpp
test/unit/jage/input/: CMakeLists.txt  controller_test.cpp  event_formatters_test.cpp  keyboard_test.cpp  monitor_test.cpp
test/unit/jage/input/adapters/: CMakeLists.txt  glfw_test.cpp
test/unit/jage/input/adapters/glfw/: CMakeLists.txt  cursor_position_test.cpp  key_press_test.cpp  mouse_button_click_test.cpp  scroll_test.cpp
test/unit/jage/input/button/: CMakeLists.txt  monitor_test.cpp
test/unit/jage/input/contexts/: CMakeLists.txt  glfw_test.cpp
test/unit/jage/input/cursor/: CMakeLists.txt  monitor_test.cpp
test/unit/jage/input/internal/concepts/: CMakeLists.txt  event_sink_test.cpp
test/unit/jage/input/keyboard/: CMakeLists.txt  action_serialize_test.cpp  key_serialize_test.cpp  monitor_test.cpp  scancode_serialize_test.cpp
test/unit/jage/input/mouse/: CMakeLists.txt  action_serialize_test.cpp
test/unit/jage/memory/: CMakeLists.txt  cacheline_slot_test.cpp
test/unit/jage/mp/: CMakeLists.txt  mp.cpp
test/unit/jage/time/: CMakeLists.txt  clock_test.cpp  hertz_test.cpp
test/unit/jage/time/internal/: CMakeLists.txt  clock_test.cpp  snapshot_cache_test.cpp
test/unit/jage/time/internal/concepts/: CMakeLists.txt  cache_snapshot_test.cpp  real_number_duration_test.cpp  real_number_time_source_test.cpp
test_package/: conanfile.py
(+183 files in other folders)
